# Atto-8

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
asm/: README.md  asm.rs
bf/: README.md  bf-mic.rs  bf-pad.py
cc/: README.md  cc.rs  codegen.rs  link.rs  optimize.rs  parse.rs  preprocess.rs  typecheck.rs
cemu/: Makefile  README.md  cemu.c
circ/: README.md  atto-8.circ  circ.py
dasm/: README.md  dasm.rs
dec/: README.md  dec.py
doc/: arch.md  font.txt  is.md  spec.md
emu/: README.md  emu.rs
enc/: README.md  enc.py
lib/: README.md  back_to_front.asm  bit.asm  clear_display.asm  controller.asm  core.asm  core_utils.asm  display.asm  hex_chars.asm  nibble.asm  print_byte.asm  prng.asm  stdio.asm  stdlib.asm  string.asm  text_utils.asm  types.asm
libc/: README.md  core.c  crt0.asm  crt0.c  ctype.c  display.c  errno.c  stdio.c  stdlib.c  string.c
mic/: README.md  mic.rs
misc/: README.md  atto-8.vim  font.txt
sim/: README.md  sim.rs
spec/: README.md  microarchitecture.md  microcomputer.md  microprocessor.md  spec.md
src/: enc.py
test/: 2048.asm  README.md  addition.hex  allocation.asm  attomon.asm  bad apple.asm  bell pattern.asm  brainfuck.asm  calc.asm  char code.asm  checkerboard.hex  circle.asm  collatz.asm  color maze.asm  count.asm  counter.asm  ctf.asm  dino.asm  draw.asm  errors.asm  errors.c  fade.asm  fibonacci.asm  fibonacci.c  fizzbuzz.asm  flappy.asm  game of life.asm  hanoi.asm  hello world.asm  hello world.c  hllowrld.asm  life.asm  mandelbrot.asm  memory.asm  misc.c  mock shell.asm  multiplication.asm  multiply.asm  (+27 more)
(+206 files in other folders)
