[package]
name = "Atto-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.1"
path-clean = "1.0.1"

[[bin]]
name = "asm"
path = "asm/asm.rs"

[[bin]]
name = "dasm"
path = "dasm/dasm.rs"

[[bin]]
name = "emu"
path = "emu/emu.rs"
